VRAM mapping change

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-30  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/PageManager.cpp: VESA情報からVRAMサイズを取得してVRAMを適切にマッピング
+
 2004-04-29  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/PageManager.cpp: VRAMのマッピング幅を拡大 高解像度に対応
