Modified Files: 	ChangeLog Makefile.in apps/Makefile apps/gui/Makefile 	apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/Makefile apps/non-gui/clock/Makefile 	apps/non-gui/jpegdemo/Makefile apps/non-gui/nic/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/tube/Makefile 	apps/non-gui/waba/Makefile env/cygwin.env env/djgpp.env 	env/linux2.x.env env/linux3.x.env env/mingw.env env/monapi.inc 	include/sys/HList.h samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/Makefile src/kernel/Makefile src/lib/Makefile 	src/lib/gui/Makefile src/lib/jpegls/Makefile 	src/lib/monapi/Makefile src/servers/Makefile 	src/servers/1linesh/Makefile src/servers/gui/Makefile 	src/servers/key/Makefile src/servers/mouse/Makefile 	src/servers/shell/Makefile tools/Makefile 	tools/fat_write/Makefile Added Files: 	env/monaelf.lds

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-30  tino  <tino@users.sourceforge.jp>
+
+        * env/monaelf.lds: Monaアプリケーション用のリンカスクリプトを追加
+
+        * env/*.env: INSTALL追加, MONAELF_LDS追加 (linux*のみ)
+
+        * 各Makefile: installでcp -uの代わりに$(INSTALL)を使用
+
 2004-04-30  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/shell/main.cpp: KeyBoardManager.cpp,hが不要なので削除
