Modified Files: 	ChangeLog apps/Makefile apps/gui/Makefile 	apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/gui/reversi/Makefile 	apps/non-gui/Makefile apps/non-gui/clock/Makefile 	apps/non-gui/jpegdemo/Makefile apps/non-gui/nic/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/tube/Makefile 	apps/non-gui/waba/Makefile bin/Makefile env/monapi.inc 	samples/Makefile samples/gui/Makefile 	samples/gui/bitmap/Makefile samples/gui/button/Makefile 	samples/gui/label/Makefile samples/non-gui/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/Makefile src/kernel/Makefile src/lib/Makefile 	src/lib/gui/Makefile src/lib/jpegls/Makefile 	src/lib/monalibc/Makefile src/lib/monapi/Makefile 	src/servers/Makefile src/servers/1linesh/Makefile 	src/servers/gui/Makefile src/servers/key/Makefile 	src/servers/mouse/Makefile src/servers/shell/Makefile 	tools/Makefile tools/bit2mnf/Makefile tools/fat_write/Makefile 	tools/monaelf/Makefile

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -10,6 +10,8 @@
 
         * env/*.env: NFLAGSでインクルードパスを指定
 
+        * src/lib/monapi: 謎のリンカエラーに対処するためmonapi.oをlibmonapi.aから外して個別リンク
+
 2004-04-30  tino  <tino@users.sourceforge.jp>
 
         * env/monaelf.lds: Monaアプリケーション用のリンカスクリプトを追加 (thanks Yuiさん)
