Modified Files: 	ChangeLog env/cygwin.env env/djgpp.env env/linux2.x.env 	env/linux3.x.env env/mingw.env env/monapi.inc src/lib/Makefile Added Files: 	src/lib/bzip2/.cvsignore src/lib/bzip2/CHANGES 	src/lib/bzip2/LICENSE src/lib/bzip2/Makefile 	src/lib/bzip2/README src/lib/bzip2/README.COMPILATION.PROBLEMS 	src/lib/bzip2/Y2K_INFO src/lib/bzip2/blocksort.c 	src/lib/bzip2/bzlib.c src/lib/bzip2/bzlib.h 	src/lib/bzip2/bzlib_private.h src/lib/bzip2/compress.c 	src/lib/bzip2/crctable.c src/lib/bzip2/decompress.c 	src/lib/bzip2/dependencies src/lib/bzip2/huffman.c 	src/lib/bzip2/manual.html src/lib/bzip2/manual_1.html 	src/lib/bzip2/manual_2.html src/lib/bzip2/manual_3.html 	src/lib/bzip2/manual_4.html src/lib/bzip2/manual_abt.html 	src/lib/bzip2/manual_ovr.html src/lib/bzip2/manual_toc.html 	src/lib/bzip2/randtable.c

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -10,7 +10,7 @@
 
         * include/macro.asm: src/kernel/macro.asmから移動
 
-        * env/*.env: NFLAGSでインクルードパスを指定
+        * env/*.env: NFLAGSでインクルードパスを指定, CCとCFLAGSを追加
 
         * src/lib/monapi: リンク問題に対処するためmonapi.oをlibmonapi.aから外して個別リンク (thanks Yuiさん)
                           FreeBSDでHELLO.ELFが正常にコンパイルできることを確認
@@ -20,6 +20,8 @@
         * include/sys/types.h (SYSTEM_CALL_GET_KERNEL_VERSION): 追加
 
         * include/monapi/syscall.h (syscall_get_kernel_version): 追加
+
+        * src/lib/bzip2: 追加
 
 2004-04-30  tino  <tino@users.sourceforge.jp>
 
