Modified Files: 	ChangeLog apps/non-gui/Makefile include/bzlib.h 	include/monalibc.h include/monalibc/stdarg.h 	include/monalibc/stdio.h include/monalibc/stdlib.h 	include/monapi/string.h include/monapi/syscall.h 	include/sys/types.h src/lib/bzip2/Makefile 	src/lib/bzip2/bzlib.c src/lib/bzip2/bzlib_private.h 	src/lib/bzip2/dependencies Added Files: 	apps/non-gui/bzcat/Makefile apps/non-gui/bzcat/dependencies 	apps/non-gui/bzcat/main.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -17,9 +17,17 @@
 
         * src/kernel/kernel.cpp: 起動メッセージでどの環境でコンパイルされたかを表示
 
+        * include/sys/types.h: Cからのincludeに対応, ここでsize_tを定義
+
         * include/sys/types.h (SYSTEM_CALL_GET_KERNEL_VERSION): 追加
 
+        * include/monapi/syscall.h: Cからのincludeに対応
+
         * include/monapi/syscall.h (syscall_get_kernel_version): 追加
+
+        * include/monapi/string.h: size_t定義を削除
+
+        * include/monalibc/*.h: size_t定義を削除
 
         * src/lib/bzip2: 追加
 
