--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-02  tino  <tino@users.sourceforge.jp>
+
+        * include/monapi/clist.h: 追加
+
+        * src/lib/monapi/clist.c: 追加
+
 2004-05-01  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/shell/elf.cpp (prepare): イメージサイズ取得のバグ修正
