--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-02  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/Process.h (class Process): スレッドスタック周りの修正(thanks Yui_Nekoさん)
+
 2004-05-02  tino  <tino@users.sourceforge.jp>
 
         * include/monapi/clist.h: 追加
