Modified Files: 	ChangeLog apps/non-gui/reversi/reversi.cpp bin/root/MONA.CFG 	include/monapi.h include/monapi/MemoryMap.h 	include/sys/types.h 	src/lib/gui/System/Mona/Forms/Application.cpp 	src/lib/monapi/Makefile src/lib/monapi/MemoryMap.cpp 	src/lib/monapi/cmessage.c src/servers/Makefile 	src/servers/gui/Makefile src/servers/gui/bzip2.cpp 	src/servers/gui/bzip2.h src/servers/gui/image.cpp 	src/servers/gui/image.h src/servers/gui/main.cpp 	src/servers/gui/screen.cpp src/servers/gui/screen.h 	src/servers/mouse/main.cpp Added Files: 	include/monapi/cmemoryinfo.h include/monapi/messages.h 	src/lib/monapi/cmemoryinfo.c src/lib/monapi/messages.c 	src/servers/file/.cvsignore src/servers/file/Makefile 	src/servers/file/main.cpp Removed Files: 	src/servers/gui/MemoryInfo.cpp src/servers/gui/MemoryInfo.h 	src/servers/gui/file.cpp src/servers/gui/file.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,17 @@
+2004-05-02  tino  <tino@users.sourceforge.jp>
+
+        * include/sys/types.h: カーネルで使わないメッセージを削除
+
+        * include/monapi/messages.h: sys/types.hから削除したものを移動, クライアント関数
+
+        * include/monapi/cmemoryinfo.h: 追加
+
+        * src/lib/monapi/cmemoryinfo.cpp: 追加
+
+        * src/servers/gui: 余分な機能を分割 → FILE.SVR
+
+        * src/servers/file: 追加
+
 2004-05-02  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/mouse/main.cpp (MessageLoop): マウスを画面最下部にもって言った場合のマウスサーバ突然死を修正
