Modified Files: 	ChangeLog apps/gui/2chAA/Makefile apps/gui/fire/Makefile 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/gui/ps/Makefile apps/non-gui/bzcat/Makefile 	apps/non-gui/clock/Makefile apps/non-gui/jpegdemo/Makefile 	apps/non-gui/nic/ne2k/Makefile apps/non-gui/noiz2bg/Makefile 	apps/non-gui/reversi/Makefile apps/non-gui/waba/Makefile 	env/monapi.inc samples/gui/bitmap/Makefile 	samples/gui/button/Makefile samples/gui/label/Makefile 	samples/non-gui/hello/Makefile samples/non-gui/kanji/Makefile 	src/lib/gui/Makefile src/lib/jpegls/Makefile 	src/servers/1linesh/Makefile src/servers/file/Makefile 	src/servers/gui/Makefile src/servers/key/KeyboardManager.cpp 	src/servers/key/Makefile src/servers/key/main.cpp 	src/servers/mouse/Makefile src/servers/shell/Makefile Added Files: 	env/app-elf.inc

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-04  tino  <tino@users.sourceforge.jp>
+
+        * env/app-elf.inc: アプリケーションのMakefileを単純化するために追加
+
+        * 各Makefile: app-elf.incを利用できるものは単純化
+
 2004-05-02  tino  <tino@users.sourceforge.jp>
 
         * include/sys/types.h: カーネルで使わないメッセージを削除
