Modified Files: 	ChangeLog tools/Makefile tools/bit2mnf/Makefile Added Files: 	tools/elf_tool/.cvsignore tools/elf_tool/Makefile 	tools/elf_tool/elf.h tools/elf_tool/elfparser.cpp 	tools/elf_tool/elfparser.h tools/elf_tool/main.cpp 	tools/elf_tool/types.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -4,6 +4,8 @@
 
         * 各Makefile: app-elf.incを利用できるものは単純化
 
+        * tools/elf_tool: ELFのテストツール
+
 2004-05-02  tino  <tino@users.sourceforge.jp>
 
         * include/sys/types.h: カーネルで使わないメッセージを削除
