Modified Files: 	ChangeLog bin/Makefile bin/root/APPS/.cvsignore 	samples/gui/bitmap/.cvsignore samples/gui/bitmap/Makefile 	samples/gui/button/.cvsignore samples/gui/button/Makefile 	samples/gui/label/.cvsignore samples/gui/label/Makefile 	samples/non-gui/hello/.cvsignore 	samples/non-gui/hello/Makefile 	samples/non-gui/kanji/.cvsignore 	samples/non-gui/kanji/Makefile src/servers/shell/main.cpp Added Files: 	env/monapi-el2.inc

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -14,6 +14,8 @@
 
         * src/servers/shell: ELF.SVRを呼び出してコマンドを実行
 
+        * env/monapi-el2.inc: 圧縮ELF対応の部分Makefile
+
 2004-05-02  tino  <tino@users.sourceforge.jp>
 
         * include/sys/types.h: カーネルで使わないメッセージを削除
