Modified Files: 	ChangeLog apps/gui/fire/Makefile apps/gui/launcher/Form1.cpp 	apps/gui/launcher/Makefile apps/gui/noiz2bg/Makefile 	apps/non-gui/bzcat/Makefile bin/root/AUTOEXEC.MSH

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -16,6 +16,8 @@
 
         * env/monapi-el2.inc: 圧縮ELF対応の部分Makefile
 
+        * apps/gui/launcher/Form1.cpp: 圧縮ELF対応
+
 2004-05-02  tino  <tino@users.sourceforge.jp>
 
         * include/sys/types.h: カーネルで使わないメッセージを削除
