Modified Files: 	ChangeLog apps/gui/Makefile Added Files: 	apps/gui/waba/.cvsignore apps/gui/waba/HELLO.WRP 	apps/gui/waba/Makefile apps/gui/waba/WABA.LIB 	apps/gui/waba/mona8x16.fnt apps/gui/waba/nmport_a.c 	apps/gui/waba/nmport_b.c apps/gui/waba/nmport_c.c 	apps/gui/waba/waba.c apps/gui/waba/wabamona.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-06  tino  <tino@users.sourceforge.jp>
+
+        * apps/gui/waba: MonaGUI”ÅWABA
+
 2004-05-04  higepon  <higepon@users.sourceforge.jp>
 
         * tools/elf_tool/elfparser.cpp (parse): relocationƒe[ƒuƒ‹Ú×‚ğ’²‚×‚é
