Modified Files: 	ChangeLog include/monapi/System.h include/monapi/messages.h 	include/sys/types.h src/kernel/Process.cpp 	src/kernel/Process.h src/kernel/elf.cpp src/kernel/kernel.cpp 	src/lib/monapi/System.cpp src/lib/monapi/messages.c 	src/servers/elf/Makefile src/servers/elf/main.cpp Added Files: 	src/servers/elf/ELFServer.h src/servers/elf/ProcessInfo.cpp 	src/servers/elf/ProcessInfo.h 	src/servers/elf/ProcessManager.cpp 	src/servers/elf/ProcessManager.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -4,6 +4,16 @@
 
         * env/monapi-elf.inc: 名前に問題があったためapp-elf.incをリネーム
 
+        * include/sys/types.h: PsInfo構造体からpathを削除
+
+        * src/kernel/kernel.cpp, elf.cpp, Process.h, Process.cpp: PsInfo構造体からpathを削除したのに対応
+
+        * include/sys/messages.h: プロセス管理メッセージ追加
+
+        * include/monapi/System.h (getParentThreadID): 追加
+
+        * src/servers/elf: プロセスの親とパスを管理 (ProcessInfo, ProcessManager)
+
 2004-05-04  higepon  <higepon@users.sourceforge.jp>
 
         * tools/elf_tool/elfparser.cpp (parse): relocationテーブル詳細を調べる
