--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -14,6 +14,10 @@
 
         * src/servers/elf: プロセスの親とパスを管理 (ProcessInfo, ProcessManager)
 
+        * src/lib/monapi/syscall.cpp (exit): 終了通知
+
+        * src/servers/shell: 同期実行
+
 2004-05-04  higepon  <higepon@users.sourceforge.jp>
 
         * tools/elf_tool/elfparser.cpp (parse): relocationテーブル詳細を調べる
