--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-07  tino  <tino@users.sourceforge.jp>
+
+        * src/servers/shell: Šg’£Žq•âŠ®‚Å.ELF, .EL2, .APP‚Ì‘S•”‚É‘Î‰ž (thanks ‚Ð‚°‚Û‚ñ‚³‚ñ)
+
 2004-05-06  tino  <tino@users.sourceforge.jp>
 
         * apps/gui/waba: MonaGUI”ÅWABA
