--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-08  tino  <tino@users.sourceforge.jp>
+
+        * src/servers/mouse/main.cpp: 高負荷時のマウスの動きを改善 (thanks ひげぽんさん)
+
 2004-05-07  tino  <tino@users.sourceforge.jp>
 
         * src/servers/shell: 拡張子補完で.ELF, .EL2, .APPの全部に対応 (thanks ひげぽんさん)
