--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-08  shadow  <shadowin@users.sourceforge.jp>
+
+        * monapi/CString: reset insert remove追加
+
+        * 1linesh: Charing -> CString 変更
+
 2004-05-08  tino  <tino@users.sourceforge.jp>
 
         * src/servers/mouse/main.cpp: 高負荷時のマウスの動きを改善 (thanks ひげぽんさん)
