--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,14 @@
+2004-05-08  tino  <tino@users.sourceforge.jp>
+
+        * src/servers/shell: 内部コマンドECHO追加
+                             コマンドラインからMSHを起動できるようにした
+
+        * bin/root/MONA.CFG: GUI.SVRの自動起動を停止
+
+        * bin/root/AUTOEXEC.MSH: Welcomeメッセージを表示, ランチャーを外した
+
+        * 各Makefile: libgui.aを使うものが更新に追随しなかった問題を修正
+
 2004-05-08  shadow  <shadowin@users.sourceforge.jp>
 
         * monapi/CString: reset insert remove追加
