Modified Files: 	ChangeLog bin/Makefile bin/root/MONA.CFG 	bin/root/APPS/.cvsignore src/servers/gui/Makefile 	src/servers/gui/main.cpp Added Files: 	bin/root/MONAHERE.JPG src/servers/gui/STARTGUI.MSH

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -9,6 +9,10 @@
 
         * 各Makefile: libgui.aを使うものが更新に追随しなかった問題を修正
 
+        * bin/root/MONAHERE.JPG: 新壁紙 (thanks nikqさん)
+
+        * src/servers/gui/STARTGUI.MSH: GUI.SVR起動バッチ
+
 2004-05-08  shadow  <shadowin@users.sourceforge.jp>
 
         * monapi/CString: reset insert remove追加
