Modified Files: 	ChangeLog include/gui/messages.h 	include/gui/System/Drawing/Bitmap.h 	src/lib/gui/System/Drawing/Bitmap.cpp 	src/lib/gui/System/Mona/Forms/Application.cpp 	src/lib/gui/System/Mona/Forms/Control.cpp 	src/lib/gui/System/Mona/Forms/Form.cpp 	src/servers/elf/ProcessManager.cpp 	src/servers/elf/ProcessManager.h src/servers/elf/main.cpp 	src/servers/gui/image.cpp src/servers/gui/image.h 	src/servers/gui/main.cpp src/servers/gui/screen.cpp 	src/servers/gui/screen.h

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-09  tino  <tino@users.sourceforge.jp>
+
+        * src/lib/gui: •Ç†‚ÌÄ•`‰æ
+
 2004-05-09  higepon  <higepon@users.sourceforge.jp>
 
         * src/lib/monapi/Screen.cpp (MonAPI): bitblt‚ÅVRAM”ÍˆÍŠO‚É•`‰æ‚µ‚È‚¢‚æ‚¤‚ÉC³
