--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-09  higepon  <higepon@users.sourceforge.jp>
+
+        * src/lib/monapi/Screen.cpp (MonAPI): bpp‚Ìˆá‚¢‚É‚æ‚é‚æ‚éF‚Ìˆá‚¢C³
+
 2004-05-09  tino  <tino@users.sourceforge.jp>
 
         * src/lib/gui: •Ç†‚ÌÄ•`‰æ
