renewal shell.svr (T.Yui)

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+
+2004-05-09  yui  <yuinejp@users.sourceforge.jp>
+
+        * src/servers/shell/ ‘S‚Ä‘‚«’¼‚µ
+
+
 2004-05-09  tino  <tino@users.sourceforge.jp>
 
         * src/servers/shell/Shell.cpp: main.cpp‚ª”ì‘å‰»‚µ‚½‚½‚ß•ªŠ„
