--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-11  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/reversi/ReversiForm.cpp (Observer): è‹l‚Ü‚è‚ÌƒoƒOC³(thanks –¼–³‚µ‚³‚ñ@2ch)
+
 2004-05-10  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/syscalls.cpp (syscall_entrance): syscall_dir_readŠg’£
