--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-15  shadow  <shadowin@users.sourceforge.jp>
+
+        * monalibc/monalibc.cpp: __power変更
+
+        * monalibc/stdlib.cpp: itosn、uitosn追加。itos、uitos変更
+
 2004-05-15  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/kernel.cpp: カーネルバージョン問い合わせのシステムコールの戻り値を整数で。
