Support Timer in MonaGUI
Modified Files:
	ChangeLog apps/gui/2chAA/Form1.cpp apps/gui/shell/Form1.cpp
	include/gui/System/Mona/Forms/Control.h
	include/monapi/cmessage.h src/lib/gui/Makefile
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/monapi/cmessage.c src/servers/shell/main.cpp
Added Files:
	include/gui/System/Mona/Forms/Timer.h
	src/lib/gui/System/Mona/Forms/Timer.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,13 @@
+2004-05-16  tino  <tino@users.sourceforge.jp>
+
+        * include/monapi/cmessages.h (monapi_cmessage_receive_header_only): ’Ç‰Á
+
+        * include/gui/System/Mona/Forms/Timer.h: ’Ç‰Á
+
+        * src/lib/gui/System/Mona/Forms/Timer.cpp: ’Ç‰Á
+
+        * apps/gui/2chAA/Form1.cpp: Timer‚ğg—p‚µ‚Ä‘‚«Š·‚¦
+
 2004-05-15  shadow  <shadowin@users.sourceforge.jp>
 
         * monalibc/monalibc.cpp: __power•ÏX
