make monapi_cmessage thread safe
Modified Files:
	ChangeLog apps/gui/shell/Form1.cpp include/monapi/Message.h
	include/monapi/cmessage.h include/monapi/messages.h
	src/lib/gui/System/Drawing/Bitmap.cpp
	src/lib/gui/System/Mona/Forms/Application.cpp
	src/lib/gui/System/Mona/Forms/Control.cpp
	src/lib/gui/System/Mona/Forms/Form.cpp
	src/lib/gui/System/Mona/Forms/Timer.cpp
	src/lib/monapi/Message.cpp src/lib/monapi/System.cpp
	src/lib/monapi/cmessage.c src/lib/monapi/messages.c
	src/lib/monapi/syscall.cpp src/servers/elf/ProcessManager.cpp
	src/servers/elf/main.cpp src/servers/file/main.cpp
	src/servers/gui/image.cpp src/servers/gui/main.cpp
	src/servers/gui/screen.cpp src/servers/key/main.cpp
	src/servers/mouse/main.cpp
	src/servers/shell/InternalCommands.cpp
	src/servers/shell/Shell.cpp src/servers/shell/main.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,6 +1,10 @@
 2004-05-16  tino  <tino@users.sourceforge.jp>
 
-        * include/monapi/cmessages.h (monapi_cmessage_receive_header_only): 追加
+        * include/monapi/cmessage.h: マルチスレッド対策のためキュー指定をサポート
+
+        * src/lib/monapi/cmessage.cpp: マルチスレッド対策のためキュー指定をサポート
+
+        * include/monapi/Message.h: シングルスレッドのみ。危険な関数を除去。
 
         * include/gui/System/Mona/Forms/Timer.h: 追加
 
