--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-16  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/gui/clock/Form1.cpp (class Form1): 時計を作成
+
 2004-05-16  tino  <tino@users.sourceforge.jp>
 
         * include/monapi/cmessage.h: マルチスレッド対策のためキュー指定をサポート
