--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-05-16  higepon  <higepon@users.sourceforge.jp>
 
+        * src/kernel/test_higepon.cpp : デッドロックの原因を探るべくデバッグコード追加。
+
         * apps/gui/clock/Form1.cpp (class Form1): 時計を作成
 
 2004-05-16  tino  <tino@users.sourceforge.jp>
