--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-20  tino  <tino@users.sourceforge.jp>
+
+        * bin/root/AUTOEXEC.MSH: デバッグ用にpsとstartguiを追加
+
+        * src/lib/monapi/syscall.cpp: デバッグコード追加 (/// temporary)
+
+        * src/servers/shell/main.cpp: デバッグコード追加 (/// temporary)
+
 2004-05-19  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/ihandlers.cpp (keyStrokeHandler): キー割り込みの際にCOMポートにスレッドダンプを書き出すように変更
