check MSG_PROCESS_STDOUT_DATA at main thread
Modified Files:
	ChangeLog src/servers/elf/main.cpp src/servers/shell/Shell.cpp

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-20  tino  <tino@users.sourceforge.jp>
 
+        * src/servers/shell/Shell.cpp: 混信チェックコード追加 (/// temporary)
+
+        * src/servers/elf/main.cpp: 混信チェックコード追加 (/// temporary)
+
+2004-05-20  tino  <tino@users.sourceforge.jp>
+
         * bin/root/AUTOEXEC.MSH: デバッグ用にpsとstartguiを追加
 
         * src/lib/monapi/syscall.cpp: デバッグコード追加 (/// temporary)
