--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -22,6 +22,8 @@
 
         * bin/root/AUTOEXEC.MSH: psとstartguiを削除
 
+        * src/servers/gui: 壁紙のリサイズに対応
+
 2004-05-21  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/test_higepon.cpp: デバッグメッセージの修正
